# scaling_analysis

./: .gitignore  .readthedocs.yaml  README.md
PopulationCoding/: README.md  pyproject.toml
PopulationCoding/PopulationCoding/: __init__.py  corr.py  dimred.py  info.py  predict.py  utils.py
docs/: conf.py  requirements.txt
docs/PopulationCoding/: conf.py  index.rst
docs/scaling_analysis/: conf.py  index.rst
scaling_analysis/: README.md  pyproject.toml
scaling_analysis/scaling_analysis/: __init__.py  experiment.py  pca.py  plotting.py  predict.py  predict_history.py  session_permutation.py  spatial.py  svca.py  temporal.py  utils.py  visual.py
